Bug 122110 - kwordquiz crashes with SIGSEGV
Summary: kwordquiz crashes with SIGSEGV
Status: RESOLVED FIXED
Alias: None
Product: kwordquiz
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Hedlund
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-16 16:30 UTC by Grzegorz Oledzki
Modified: 2006-02-17 03:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grzegorz Oledzki 2006-02-16 16:30:21 UTC
Version:            (using KDE KDE 3.5.1)
Installed from:    Ubuntu Packages
OS:                Linux

Step to reproduce:
1. Load any file with File|Open.
2. Go to Q&A with Go To|Question&Answer.
3. Go back to editing with Go To|Editor.
4. It crashes before (?) showing the editor window.

It shows up the "The KDE crash handler" window with description:
"The application KWordQuiz (kwordquiz) crashed and caused the signal 11 (SIGSEGV)."

# uname -srvmpio
Linux 2.6.15-15-amd64-generic #1 SMP PREEMPT Thu Feb 9 19:40:51 UTC 2006 x86_64 unknown unknown GNU/Linux

the back trace is:
------------------------------ back trace ----------------------------------
(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 46912573775360 (LWP 5802)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0x00002aaaaefe3752 in nanosleep () from /lib/libc.so.6
#0  0x00002aaaaefe3752 in nanosleep () from /lib/libc.so.6
#1  0x00002aaaaefe35f0 in sleep () from /lib/libc.so.6
#2  0x00002aaaabd2ab45 in KCrash::startDrKonqi ()
   from /usr/lib/libkdecore.so.4
#3  0x00002aaaabd508ec in KCrash::defaultCrashHandler ()
   from /usr/lib/libkdecore.so.4
#4  0x00002aaaaef821b0 in killpg () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()
Comment 1 Peter Hedlund 2006-02-17 03:26:19 UTC
SVN commit 510363 by hedlund:

Don't crash when switching back to editor.

Distros affected by this bug: PCLinuxOS and Ubuntu.
Distros not affected include Slackware and Gentoo.

BUG:122110

 M  +1 -0      qaview.cpp  


--- branches/KDE/3.5/kdeedu/kwordquiz/src/qaview.cpp #510362:510363
@@ -65,6 +65,7 @@
 
 QAView::~QAView()
 {
+  delete txtAnswer; //Fixes #122110 on PCLOS and Ubuntu
 }
 
 void QAView::setQuiz(WQQuiz *quiz)