Don't crash when switching back to editor.

Distros affected by this bug: PCLinuxOS and Ubuntu.
Distros not affected include Slackware and Gentoo.

BUG:122110

svn path=/branches/KDE/3.5/kdeedu/kwordquiz/; revision=510363